--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 
 [features]
 default = ["wasabi"]
-wasabi = ["dep:net_wasabi", "dep:nori"]
+wasabi = ["dep:net_wasabi", "dep:noli"]
 
 [[bin]]
 name = "saba"
@@ -20,4 +20,4 @@ required-features = ["wasabi"]
 [dependencies]
 saba_core = { path = "./saba_core" }
 net_wasabi = { path = "./net/wasabi", optional = true }
-nori = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
+noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
