--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,23 @@
+[workspace]
+members = ["net/wasabi", "saba_core"]
+
 [package]
+authors = ["susumu tomita <oyster880@gmail.com>"]
+default-run = "saba"
 name = "saba"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = ["wasabi"]
+wasabi = ["dep:net_wasabi", "dep:noli"]
+
+[[bin]]
+name = "saba"
+path = "src/main.rs"
+required-features = ["wasabi"]
+
 [dependencies]
-noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba" }
-
-[workspace]
-members = [
-    "saba_core",
-    # その他のクレートがあればここに列挙
-]
-
+saba_core = { path = "./saba_core" }
+net_wasabi = { path = "./net/wasabi", optional = true }
+noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
