--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ net_wasabi = { path = "./net/wasabi", optional = true }
 noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
 cargo-husky = "1.5.0"
 
-[package.metadata.husky.hooks]
-pre-commit = "task ci"
-pre-push = "task ci"
+[dev-dependencies.cargo-husky]
+version = "1"
+default-features = false
+features = ["user-hooks"]
