--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,15 @@ jobs:
         run: cargo install cargo-tarpaulin  --locked
 
       - name: Run Tarpaulin
-        run: cargo tarpaulin --workspace --out Xml
+        run: cargo tarpaulin --workspace --out Xml --out Html
 
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-report
+          path: |
+            cobertura.xml
+            tarpaulin-report.html
 
   docker:
     runs-on: ubuntu-latest
