update receive response (#89)
* update receive response

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,12 @@ jobs:
         with:
           submodules: true
 
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          components: rustfmt, clippy
+
       - name: Install Tarpaulin
         run: cargo install cargo-tarpaulin --locked
 
