--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["net/wasabi", "saba_core"]
+members = ["net/wasabi", "saba_core", "ui/wasabi"]
 
 [package]
 authors = ["susumu tomita <oyster880@gmail.com>"]
