--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,9 @@ saba_core = { path = "./saba_core" }
 net_wasabi = { path = "./net/wasabi", optional = true }
 ui_wasabi = { path = "./ui/wasabi", optional = true }
 noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
-cargo-husky = "1.5.0"
+# cargo-husky = "1.5.0"
 
-[dev-dependencies.cargo-husky]
-version = "1"
-default-features = false
-features = ["user-hooks"]
+# [dev-dependencies.cargo-husky]
+# version = "1"
+# default-features = false
+# features = ["user-hooks"]
