--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -77,7 +77,7 @@ tasks:
     desc: Run all CI checks
     cmds:
       - task lint
-      # - task test
+      - task test
 
   run:
     desc: Run the application
