--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,11 +44,11 @@ jobs:
       - name: Check formatting
         run: cargo fmt --all -- --check
 
-      - name: Run clippy
-        run: cargo clippy --workspace -- -D warnings
-
       - name: Run tests
         run: cargo test --workspace
+
+      - name: Run clippy
+        run: cargo clippy --workspace --exclude ui_wasabi -- -D warnings
 
   rust-coverage:
     runs-on: ubuntu-latest
