--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["net/wasabi", "saba_core", "ui/wasabi"]
+members = ["net/wasabi", "saba_core"]
 
 [package]
 authors = ["susumu tomita <oyster880@gmail.com>"]
@@ -9,7 +9,7 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["wasabi"]
+
 wasabi = ["dep:net_wasabi", "dep:ui_wasabi", "dep:noli"]
 
 [[bin]]
