--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,7 @@ jobs:
         run: |
           cargo tarpaulin \
             --workspace \
+            --exclude ui_wasabi \
             --out Xml \
             --out Html \
             | tee tarpaulin_output.txt
